[gd_scene load_steps=9 format=3 uid="uid://d11mpmk81tckv"]

[ext_resource type="Theme" uid="uid://ccv886hidycly" path="res://Assets/Themes/snagpy.tres" id="1_du3pb"]
[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="2_4jwdm"]
[ext_resource type="Shader" path="res://Assets/Shaders/pause_menu.gdshader" id="2_rbmgk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ouqpe"]
shader = ExtResource("2_rbmgk")
shader_parameter/blur_amount = null
shader_parameter/mix_amount = 1.0
shader_parameter/color_over = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rdhdi"]

[sub_resource type="Animation" id="Animation_oerpk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/blur_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/color_over")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_dvs8j"]
resource_name = "blur"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/blur_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [null, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:material:shader_parameter/color_over")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.376471)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gj7ea"]
_data = {
"RESET": SubResource("Animation_oerpk"),
"blur": SubResource("Animation_dvs8j")
}

[node name="Pause Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_du3pb")
script = ExtResource("2_4jwdm")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ouqpe")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -92.5
offset_right = 96.0
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_rdhdi")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Restart"

[node name="Start Screen" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gj7ea")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Start Screen" to="." method="_on_start_screen_pressed"]
